--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,15 @@
 <div>
   <h1>Mi aplicación Dragon Ball</h1>
   <p>Hola</p>
+  <app-goku></app-goku>
+  <app-hohan></app-hohan>
 
   <!-- app.component.html -->
 <!-- app.component.html -->
-<app-goku [techniques]="techniques" (hohanLearnedTechnique)="notifyGoku($event)"></app-goku>
+<!-- <app-goku [techniques]="techniques" (hohanLearnedTechnique)="notifyGoku($event)"></app-goku>
 <app-hohan [learnedTechniques]="hohanLearnedTechniques"></app-hohan>
 
 
 </div>
-
+-->
 
