tercer commit-buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,9 @@
   <h1>Mi aplicación Dragon Ball</h1>
   <p>Hola</p>
   <app-goku></app-goku>
+  <!-- En app.component.html -->
+<app-goku [techniques]="techniques"></app-goku>
+
   <app-hohan></app-hohan>
 
   <!-- app.component.html -->
