--- a/src/app/goku/goku.component.html
+++ b/src/app/goku/goku.component.html
@@ -8,3 +8,16 @@
     </li>
   </ul>
 </div>
+
+
+<!-- goku.component.html -->
+
+<div>
+  <h2>Técnicas que Goku puede enseñar:</h2>
+  <ul>
+    <li *ngFor="let technique of techniques">
+      {{ technique.name }} - Daño: {{ technique.damage }}, Dificultad: {{ technique.complexity }}
+      <button (click)="transferTechniqueToGohan(technique)">Enseñar a Gohan</button>
+    </li>
+  </ul>
+</div>
